--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="https://hemantraj2807.github.io/myportfolio/">Home</a></li>
-                <li><a href="https://hemantraj2807.github.io/myportfolio/about">About</a></li>
+                <li><a href="https://hemantraj2807.github.io/Portfolio/">Home</a></li>
+                <li><a href="https://hemantraj2807.github.io/Portfolio/about">About</a></li>
                 <li><a href="#">Qualification</a></li>
-                <li><a href="https://hemantraj2807.github.io/myportfolio/contact">Contact</a></li>
-                <li><a href="https://hemantraj2807.github.io/myportfolio/feedback">Feedback</a></li>
+                <li><a href="https://hemantraj2807.github.io/Portfolio/contact">Contact</a></li>
+                <li><a href="https://hemantraj2807.github.io/Portfolio/feedback">Feedback</a></li>
                 <div>Hemant Raj</div>
             </ul>
         </nav>
