--- a/about.html
+++ b/about.html
@@ -268,9 +268,8 @@
     <div class="c1">
     Hello, everyone! <br>
   
-        My name is <b> HEMANT RAJ </b> and I'm from <b>BOKARO STEEL CITY</b>. I'm 19th year old. I'm currently studying
-        <B>BTECH CSE DS</B> at <B>RUNGTA COLLEGE OF ENGGINEERING AND TECHNOLOGY</B>, and I hope to become <B>DATA
-            SCIENTIST</B> one day.<br>
+        My name is <b> HEMANT RAJ </b> and I'm from <b>BOKARO STEEL CITY</b>. I'm 21 year old. I have opted <B>BTECH</B> in
+        <B>MECHANICAL ENGINEERING</B> at <B>BIRLA INSTITUTE OF TECHNOLOGY MESRA</B>, and I'm interested in technical field. <br>
         <br>
         I'm really passionate about Coading, and I'm always looking for new ways to learn and improve my skills. I'm
         also a firm believer of teamwork, and I believe that working together is the best way to achieve success.
